
PIG-2315: Make as clause work in generate (daijy via knoguchi)

PIG-4921: Kill running jobs on InterruptedException (rohini)

PIG-4916: Pig on Tez fail to remove temporary HDFS files in some cases (daijy)

Release 0.16.1 - Unreleased

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4945: Update document for conflicting macro params (knoguchi via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-4260: SpillableMemoryManager.spill should revert spill on all exception (rohini)

PIG-4918: Pig on Tez cannot switch pig.temp.dir to another fs (daijy)

PIG-5078: Script fails with error - POStoreTez only accepts MROutput (rohini)

PIG-5088: HashValuePartitioner has skew when there is only map fields (rohini)

PIG-5043: Slowstart not applied in Tez with PARALLEL clause (rohini)

PIG-4930: Skewed Join Breaks On Empty Sampled Input When Key is From Map (nkollar via rohini)

PIG-3417: Job fails when skewed join is done on tuple key (nkollar via rohini)

PIG-5074: Build broken when hadoopversion=20 in branch 0.16 (szita via daijy)

PIG-5064: NPE in TestScriptUDF#testPythonBuiltinModuleImport1 when JAVA_HOME is not set (water via daijy)

PIG-5048: HiveUDTF fail if it is the first expression in projection (nkollar via daijy)

PIG-4951: Rename PIG_ATS_ENABLED constant (szita via daijy)

PIG-4947: LOAD with HBaseStorage using a mix of pure wildcards and prefixed wildcards results
  in empty maps for the pure wildcarded column families (daijy)

PIG-4948: Pig on Tez AM use too much memory on a small cluster (daijy)

PIG-4949: Fix registering jar in S3 which was broken by PIG-4417 in Pig 0.16 (yangyishan0901m via daijy)

PIG-4950: Fix minor issues with running scripts in non-local FileSystems (petersla via daijy)

Release 0.16.0

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4719: Documentation for PIG-4704: Customizable Error Handling for Storers in Pig (daijy)

PIG-4714: Improve logging across multiple components with callerId (daijy)
